src/snapshots/tests__attributes_model.snap
---
created: "2019-07-09T10:46:15.657691214Z"
creator: insta@0.8.1
source: src/lib.rs
expression: model
---
Asdl {
    sum_types: [
        SumType {
            id: "stm",
            constructors: [
                Constructor {
                    id: "Compound",
                    fields: [
                        Field {
                            id: "s1",
                            type_id: "stm",
                            is_single: true,
                            is_option: false,
                            is_sequence: false,
                        },
                        Field {
                            id: "s2",
                            type_id: "stm",
                            is_single: false,
                            is_option: false,
                            is_sequence: true,
                        },
                    ],
                },
                Constructor {
                    id: "Single",
                    fields: [
                        Field {
                            id: "stm",
                            type_id: "stm",
                            is_single: true,
                            is_option: false,
                            is_sequence: false,
                        },
                    ],
                },
            ],
            attributes: [
                Field {
                    id: "prodType",
                    type_id: "prodType",
                    is_single: false,
                    is_option: true,
                    is_sequence: false,
                },
            ],
        },
    ],
    prod_types: [
        ProdType {
            id: "prodType",
            fields: [
                Field {
                    id: "s1",
                    type_id: "stm",
                    is_single: true,
                    is_option: false,
                    is_sequence: false,
                },
            ],
        },
    ],
}
