src/snapshots/tests__attributes_syntax.snap
---
created: "2019-07-09T10:44:47.497887671Z"
creator: insta@0.8.1
source: src/lib.rs
expression: root.debug_dump()
---
node Root[0; 159)
  token WS [0; 13)
  node SumType[13; 127)
    node TypeId[13; 16)
      token `stm` [13; 16)
    token WS [16; 17)
    token `=` [17; 18)
    token WS [18; 19)
    node Constr[19; 44)
      node ConstrId[19; 27)
        token `Compound` [19; 27)
      token `(` [27; 28)
      node Single[28; 34)
        node TypeId[28; 31)
          token `stm` [28; 31)
        token WS [31; 32)
        node Id[32; 34)
          token `s1` [32; 34)
      token `,` [34; 35)
      token WS [35; 36)
      node Sequence[36; 43)
        node TypeId[36; 39)
          token `stm` [36; 39)
        token `*` [39; 40)
        token WS [40; 41)
        node Id[41; 43)
          token `s2` [41; 43)
      token `)` [43; 44)
    token WS [44; 61)
    token `|` [61; 62)
    token WS [62; 63)
    node Constr[63; 74)
      node ConstrId[63; 69)
        token `Single` [63; 69)
      token `(` [69; 70)
      node Single[70; 73)
        node TypeId[70; 73)
          token `stm` [70; 73)
      token `)` [73; 74)
    token WS [74; 93)
    node Attrs[93; 127)
      token `attributes` [93; 103)
      token `(` [103; 104)
      node Opt[104; 113)
        node TypeId[104; 112)
          token `prodType` [104; 112)
        token `?` [112; 113)
      token `)` [113; 114)
      token WS [114; 127)
  node ProdType[127; 146)
    node TypeId[127; 135)
      token `prodType` [127; 135)
    token WS [135; 136)
    token `=` [136; 137)
    token WS [137; 138)
    token `(` [138; 139)
    node Single[139; 145)
      node TypeId[139; 142)
        token `stm` [139; 142)
      token WS [142; 143)
      node Id[143; 145)
        token `s1` [143; 145)
    token `)` [145; 146)
  token WS [146; 159)

