src/snapshots/tests__comments.snap
---
created: "2019-07-10T09:41:29.493885822Z"
creator: insta@0.8.1
source: src/parser.rs
expression: root.debug_dump()
---
node Root[0; 235)
  token WS [0; 13)
  token `// first comment
` [13; 30)
  token WS [30; 42)
  node SumType[42; 203)
    node TypeId[42; 45)
      token `stm` [42; 45)
    token WS [45; 46)
    token `=` [46; 47)
    token WS [47; 48)
    node Constr[48; 73)
      node ConstrId[48; 56)
        token `Compound` [48; 56)
      token `(` [56; 57)
      node Single[57; 63)
        node TypeId[57; 60)
          token `stm` [57; 60)
        token WS [60; 61)
        node Id[61; 63)
          token `s1` [61; 63)
      token `,` [63; 64)
      token WS [64; 65)
      node Sequence[65; 72)
        node TypeId[65; 68)
          token `stm` [65; 68)
        token `*` [68; 69)
        token WS [69; 70)
        node Id[70; 72)
          token `s2` [70; 72)
      token `)` [72; 73)
    token WS [73; 90)
    token `|` [90; 91)
    token WS [91; 92)
    node Constr[92; 103)
      node ConstrId[92; 98)
        token `Single` [92; 98)
      token `(` [98; 99)
      node Single[99; 102)
        node TypeId[99; 102)
          token `stm` [99; 102)
      token `)` [102; 103)
    token WS [103; 104)
    token `// second comment
` [104; 122)
    token WS [122; 140)
    node Attrs[140; 203)
      token `attributes` [140; 150)
      token `(` [150; 151)
      node Opt[151; 160)
        node TypeId[151; 159)
          token `prodType` [151; 159)
        token `?` [159; 160)
      token `)` [160; 161)
      token WS [161; 174)
      token `// third comment
` [174; 191)
      token WS [191; 203)
  node ProdType[203; 222)
    node TypeId[203; 211)
      token `prodType` [203; 211)
    token WS [211; 212)
    token `=` [212; 213)
    token WS [213; 214)
    token `(` [214; 215)
    node Single[215; 221)
      node TypeId[215; 218)
        token `stm` [215; 218)
      token WS [218; 219)
      node Id[219; 221)
        token `s1` [219; 221)
    token `)` [221; 222)
  token WS [222; 235)

