src/snapshots/tests__empty_asdl.snap
---
created: "2019-07-02T09:28:58.366752662Z"
creator: insta@0.8.1
source: src/parser.rs
expression: root.debug_dump()
---
node Root[0; 0)

