src/snapshots/tests__simple_successful_test_syntax.snap
---
created: "2019-06-20T22:36:03.599286946Z"
creator: insta@0.8.1
source: src/lib.rs
expression: root.debug_dump()
---
SyntaxKind(21)@[0; 159)
  SyntaxKind(23)@[0; 87)
    SyntaxKind(8)@[0; 13)
    SyntaxKind(6)@[13; 16)
    SyntaxKind(8)@[16; 17)
    SyntaxKind(9)@[17; 18)
    SyntaxKind(8)@[18; 19)
    SyntaxKind(25)@[19; 44)
      SyntaxKind(7)@[19; 27)
      SyntaxKind(0)@[27; 28)
      SyntaxKind(27)@[28; 34)
        SyntaxKind(6)@[28; 31)
        SyntaxKind(11)@[31; 31)
        SyntaxKind(8)@[31; 32)
        SyntaxKind(28)@[32; 34)
      SyntaxKind(5)@[34; 35)
      SyntaxKind(27)@[35; 43)
        SyntaxKind(8)@[35; 36)
        SyntaxKind(6)@[36; 39)
        SyntaxKind(4)@[39; 40)
        SyntaxKind(8)@[40; 41)
        SyntaxKind(28)@[41; 43)
      SyntaxKind(1)@[43; 44)
    SyntaxKind(8)@[44; 61)
    SyntaxKind(2)@[61; 62)
    SyntaxKind(8)@[62; 63)
    SyntaxKind(25)@[63; 74)
      SyntaxKind(7)@[63; 69)
      SyntaxKind(0)@[69; 70)
      SyntaxKind(27)@[70; 73)
        SyntaxKind(6)@[70; 73)
        SyntaxKind(11)@[73; 73)
      SyntaxKind(1)@[73; 74)
    SyntaxKind(8)@[74; 87)
  SyntaxKind(23)@[87; 127)
    SyntaxKind(6)@[87; 95)
    SyntaxKind(8)@[95; 96)
    SyntaxKind(9)@[96; 97)
    SyntaxKind(8)@[97; 98)
    SyntaxKind(25)@[98; 101)
      SyntaxKind(7)@[98; 101)
    SyntaxKind(8)@[101; 102)
    SyntaxKind(2)@[102; 103)
    SyntaxKind(8)@[103; 104)
    SyntaxKind(25)@[104; 107)
      SyntaxKind(7)@[104; 107)
    SyntaxKind(8)@[107; 108)
    SyntaxKind(2)@[108; 109)
    SyntaxKind(8)@[109; 110)
    SyntaxKind(25)@[110; 114)
      SyntaxKind(7)@[110; 114)
    SyntaxKind(8)@[114; 127)
  SyntaxKind(24)@[127; 159)
    SyntaxKind(6)@[127; 135)
    SyntaxKind(8)@[135; 136)
    SyntaxKind(9)@[136; 137)
    SyntaxKind(8)@[137; 138)
    SyntaxKind(0)@[138; 139)
    SyntaxKind(27)@[139; 150)
      SyntaxKind(6)@[139; 147)
      SyntaxKind(3)@[147; 148)
      SyntaxKind(8)@[148; 149)
      SyntaxKind(28)@[149; 150)
    SyntaxKind(5)@[150; 151)
    SyntaxKind(27)@[151; 158)
      SyntaxKind(8)@[151; 152)
      SyntaxKind(6)@[152; 155)
      SyntaxKind(11)@[155; 155)
      SyntaxKind(8)@[155; 156)
      SyntaxKind(28)@[156; 158)
    SyntaxKind(1)@[158; 159)

