src/snapshots/tests__test_asdl_definition_syntax.snap
---
created: "2019-06-07T15:33:47.680034921Z"
creator: insta@0.8.1
source: src/lib.rs
expression: root.debug_dump()
---
SyntaxKind(21)@[0; 388)
  SyntaxKind(8)@[0; 3)
  SyntaxKind(22)@[3; 151)
    SyntaxKind(6)@[3; 7)
    SyntaxKind(8)@[7; 8)
    SyntaxKind(9)@[8; 9)
    SyntaxKind(8)@[9; 10)
    SyntaxKind(23)@[10; 151)
      SyntaxKind(25)@[10; 60)
        SyntaxKind(7)@[10; 13)
        SyntaxKind(26)@[13; 60)
          SyntaxKind(0)@[13; 14)
          SyntaxKind(27)@[14; 24)
            SyntaxKind(6)@[14; 24)
          SyntaxKind(5)@[24; 25)
          SyntaxKind(8)@[25; 26)
          SyntaxKind(27)@[26; 32)
            SyntaxKind(6)@[26; 31)
            SyntaxKind(4)@[31; 32)
          SyntaxKind(5)@[32; 33)
          SyntaxKind(8)@[33; 34)
          SyntaxKind(27)@[34; 45)
            SyntaxKind(6)@[34; 45)
          SyntaxKind(5)@[45; 46)
          SyntaxKind(8)@[46; 47)
          SyntaxKind(27)@[47; 59)
            SyntaxKind(6)@[47; 58)
            SyntaxKind(4)@[58; 59)
          SyntaxKind(1)@[59; 60)
      SyntaxKind(8)@[60; 89)
      SyntaxKind(2)@[89; 90)
      SyntaxKind(8)@[90; 91)
      SyntaxKind(25)@[91; 125)
        SyntaxKind(7)@[91; 98)
        SyntaxKind(26)@[98; 125)
          SyntaxKind(0)@[98; 99)
          SyntaxKind(27)@[99; 109)
            SyntaxKind(6)@[99; 109)
          SyntaxKind(5)@[109; 110)
          SyntaxKind(8)@[110; 111)
          SyntaxKind(27)@[111; 116)
            SyntaxKind(6)@[111; 116)
          SyntaxKind(5)@[116; 117)
          SyntaxKind(8)@[117; 118)
          SyntaxKind(27)@[118; 124)
            SyntaxKind(6)@[118; 123)
            SyntaxKind(4)@[123; 124)
          SyntaxKind(1)@[124; 125)
      SyntaxKind(8)@[125; 151)
  SyntaxKind(22)@[151; 214)
    SyntaxKind(6)@[151; 162)
    SyntaxKind(8)@[162; 163)
    SyntaxKind(9)@[163; 164)
    SyntaxKind(8)@[164; 165)
    SyntaxKind(23)@[165; 214)
      SyntaxKind(25)@[165; 188)
        SyntaxKind(7)@[165; 168)
        SyntaxKind(26)@[168; 188)
          SyntaxKind(0)@[168; 169)
          SyntaxKind(27)@[169; 179)
            SyntaxKind(6)@[169; 179)
          SyntaxKind(5)@[179; 180)
          SyntaxKind(8)@[180; 181)
          SyntaxKind(27)@[181; 187)
            SyntaxKind(6)@[181; 186)
            SyntaxKind(4)@[186; 187)
          SyntaxKind(1)@[187; 188)
      SyntaxKind(8)@[188; 214)
  SyntaxKind(22)@[214; 388)
    SyntaxKind(6)@[214; 219)
    SyntaxKind(8)@[219; 220)
    SyntaxKind(9)@[220; 221)
    SyntaxKind(8)@[221; 222)
    SyntaxKind(23)@[222; 388)
      SyntaxKind(25)@[222; 249)
        SyntaxKind(7)@[222; 224)
        SyntaxKind(26)@[224; 249)
          SyntaxKind(0)@[224; 225)
          SyntaxKind(27)@[225; 235)
            SyntaxKind(6)@[225; 235)
          SyntaxKind(5)@[235; 236)
          SyntaxKind(8)@[236; 237)
          SyntaxKind(27)@[237; 248)
            SyntaxKind(6)@[237; 247)
            SyntaxKind(3)@[247; 248)
          SyntaxKind(1)@[248; 249)
      SyntaxKind(8)@[249; 278)
      SyntaxKind(2)@[278; 279)
      SyntaxKind(8)@[279; 280)
      SyntaxKind(25)@[280; 311)
        SyntaxKind(7)@[280; 286)
        SyntaxKind(26)@[286; 311)
          SyntaxKind(0)@[286; 287)
          SyntaxKind(27)@[287; 297)
            SyntaxKind(6)@[287; 297)
          SyntaxKind(5)@[297; 298)
          SyntaxKind(8)@[298; 299)
          SyntaxKind(27)@[299; 310)
            SyntaxKind(6)@[299; 309)
            SyntaxKind(3)@[309; 310)
          SyntaxKind(1)@[310; 311)
      SyntaxKind(8)@[311; 340)
      SyntaxKind(2)@[340; 341)
      SyntaxKind(8)@[341; 342)
      SyntaxKind(25)@[342; 375)
        SyntaxKind(7)@[342; 350)
        SyntaxKind(26)@[350; 375)
          SyntaxKind(0)@[350; 351)
          SyntaxKind(27)@[351; 361)
            SyntaxKind(6)@[351; 361)
          SyntaxKind(5)@[361; 362)
          SyntaxKind(8)@[362; 363)
          SyntaxKind(27)@[363; 374)
            SyntaxKind(6)@[363; 373)
            SyntaxKind(3)@[373; 374)
          SyntaxKind(1)@[374; 375)
      SyntaxKind(8)@[375; 388)

