src/snapshots/tests__test_parse.snap
---
created: "2019-05-28T13:54:23.256472907Z"
creator: insta@0.8.1
source: src/lib.rs
expression: res.debug_dump()
---
SyntaxKind(21)@[0; 169)
  SyntaxKind(8)@[0; 13)
  SyntaxKind(22)@[13; 86)
    SyntaxKind(6)@[13; 16)
    SyntaxKind(8)@[16; 17)
    SyntaxKind(9)@[17; 18)
    SyntaxKind(8)@[18; 19)
    SyntaxKind(23)@[19; 86)
      SyntaxKind(25)@[19; 43)
        SyntaxKind(7)@[19; 27)
        SyntaxKind(26)@[27; 43)
          SyntaxKind(0)@[27; 28)
          SyntaxKind(27)@[28; 34)
            SyntaxKind(6)@[28; 31)
            SyntaxKind(8)@[31; 32)
            SyntaxKind(28)@[32; 34)
              SyntaxKind(6)@[32; 34)
          SyntaxKind(5)@[34; 35)
          SyntaxKind(8)@[35; 36)
          SyntaxKind(27)@[36; 42)
            SyntaxKind(6)@[36; 39)
            SyntaxKind(8)@[39; 40)
            SyntaxKind(28)@[40; 42)
              SyntaxKind(6)@[40; 42)
          SyntaxKind(1)@[42; 43)
      SyntaxKind(8)@[43; 60)
      SyntaxKind(2)@[60; 61)
      SyntaxKind(8)@[61; 62)
      SyntaxKind(25)@[62; 73)
        SyntaxKind(7)@[62; 68)
        SyntaxKind(26)@[68; 73)
          SyntaxKind(0)@[68; 69)
          SyntaxKind(27)@[69; 72)
            SyntaxKind(6)@[69; 72)
          SyntaxKind(1)@[72; 73)
      SyntaxKind(8)@[73; 86)
  SyntaxKind(22)@[86; 125)
    SyntaxKind(6)@[86; 94)
    SyntaxKind(8)@[94; 95)
    SyntaxKind(9)@[95; 96)
    SyntaxKind(8)@[96; 97)
    SyntaxKind(23)@[97; 125)
      SyntaxKind(25)@[97; 101)
        SyntaxKind(7)@[97; 100)
        SyntaxKind(8)@[100; 101)
      SyntaxKind(2)@[101; 102)
      SyntaxKind(8)@[102; 103)
      SyntaxKind(25)@[103; 106)
        SyntaxKind(7)@[103; 106)
      SyntaxKind(2)@[106; 107)
      SyntaxKind(8)@[107; 108)
      SyntaxKind(25)@[108; 125)
        SyntaxKind(7)@[108; 112)
        SyntaxKind(8)@[112; 125)
  SyntaxKind(22)@[125; 156)
    SyntaxKind(6)@[125; 133)
    SyntaxKind(8)@[133; 134)
    SyntaxKind(9)@[134; 135)
    SyntaxKind(8)@[135; 136)
    SyntaxKind(24)@[136; 156)
      SyntaxKind(26)@[136; 156)
        SyntaxKind(0)@[136; 137)
        SyntaxKind(27)@[137; 147)
          SyntaxKind(6)@[137; 145)
          SyntaxKind(8)@[145; 146)
          SyntaxKind(28)@[146; 147)
            SyntaxKind(6)@[146; 147)
        SyntaxKind(5)@[147; 148)
        SyntaxKind(8)@[148; 149)
        SyntaxKind(27)@[149; 155)
          SyntaxKind(6)@[149; 152)
          SyntaxKind(8)@[152; 153)
          SyntaxKind(28)@[153; 155)
            SyntaxKind(6)@[153; 155)
        SyntaxKind(1)@[155; 156)
  SyntaxKind(8)@[156; 169)

